# vogelfrei

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  zensical.toml
.github/workflows/: deploy.yaml
.obsidian/: graph.json  workspace.json
Untitled/: Character Creation.md
combat_sim/: __init__.py  __main__.py  actions.py  battlefield.py  combat.py  conditions.py  creatures.py  dice.py  geometry.py  items.py  movement.py  party.py  scenarios.py  stats.py  targeting.py
combat_sim/ai/: __init__.py  _helpers.py  base.py  berserker.py  cautious.py  duellist.py  gunner.py  kiting.py  scripted.py
combat_sim/ui/: __init__.py  __main__.py  frontend.py  game.py  human_ai.py  maps.py  parties.py  registry.py
docs/: index.md  toc.md
docs/Adventuring/: Healing.md  Skills.md  Time and Movement.md  index.md
docs/Character/: Ability Scores.md  Advancement.md  Alignment.md  Class and Career.md  Name.md  Starting Possessions.md  index.md
docs/Encounters/: Combat Actions.md  Encounter Distance.md  Initiative.md  Morale.md  Reaction Roll.md  Surprise.md  index.md
docs/Equipment/: Animals.md  Armor.md  Containers.md  Food.md  Lodging.md  Miscellaneous.md  Services.md  Vehicles.md  (+1 more)
overrides/: main.html
scripts/: add_career_images.py  snapshot-nightly.sh
source/: quartz.config.ts  quartz.layout.ts
tests/: conftest.py  test_battlefield.py  test_geometry.py  test_iso_frontend.py  test_kiting_ai.py  test_movement.py  test_pathfinding.py  test_range_band.py  test_regression.py  test_scripted_ai.py  test_targeting.py  test_ui_game.py  test_ui_maps.py
(+331 files in other folders)
